Release Notes
=============

trunk
-----
* Added support for re(over) sampling of corsika showers in photon propagation
stage.

Release V01-10-04
-----------------
* Support (including traysegments) for unbuased muongun generation
* Updated defaults for NuGen
* Updated default ice model
* Bug fix: skip I3MuonSliceRemoverAndPulseRelabeler if MMCTrackList is None

Release V01-10-02
-----------------
* added option to control NuGen's zenith sampling mode

Release V01-10-01
-----------------
* Config parameters for NuGen differential x-sections
* Enable histograms for MuonGun

Release V01-10-00
-----------------
* Support for new modes in neutrino-generator
* Added jcorska (corsika_dev)

Release V01-09-00
-----------------

* Added S-,M-frames to MuonGun IPModule. S-Frames are needed to weigh MuonGun events.
* Added I3PrimaryPulseMapper from sim-services to generate an I3ParticleIDMap that associates MCPulses with
  the primary of the particle that produced them. PMTResponseSimulator adds an I3ParticleIDMap that maps pulses with
  the particle that produced them but often these secondary particles are not saved in order to save space on disc.
* Added a merged I3MCTree that combines SignalMCTree and BackgroundMCTree in order to keep output compatible with 
  previous versions.
* Fixed a problem with GENIE NuTau + GEANT4 not working due to the I3TauSanitizer. Also
  added the ability to shift the center of the GENIE generation volume.
* Switched GENIE from using the 2.6.4 splines to 2.8.6 splines
* Added documentation and tests.

Release V01-08-07
-----------------

* IP2 needs the corsika version to be a string

Release V01-08-06
-----------------

* Corrects a bug in ppc module that inavertently renamed mcpes.

Release V01-08-05
-----------------
* Corrects a bug in ppc module that inavertently renamed mcpes.

* Added option to disable Histograms
* Added option to set CORSIKA run number.
* Renamed diplopia instances to polyplopia